package example.designpattern.structural.decorator;

//抽象界面构件类：抽象构件类，为了突出与模式相关的核心代码，对原有控件代码进行了大
abstract class Component {
	public abstract void display();
}