@startuml
abstract class Component{
+{abstract} opreation();
+{abstract} add(Component c);
+{abstract} remove(Component c);
+{abstract} getChild(int i);
}

class Leaf{
+opreation();
}
class Composite{
+opreation();
+add(Component c);
+remove(Component c);
+getChild(int i);
}
note left:for(Component child:children){\nchild.opreateion();\n}


class Client{

}
Leaf -up-|> Component
Composite -up-|>Component
Composite o-->Component:children
Client .right..> Component


@enduml